auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e41ccb5",
+   "id": "630c2ecf",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b390ff",
+   "id": "1bedc334",
    "metadata": {},
    "source": [
     "# About\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1aca2a5",
+   "id": "661f3734",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d70727d3",
+   "id": "ad470294",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "632c34d2",
+   "id": "cb0922fd",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562c1aa8",
+   "id": "66f95e11",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -154,7 +154,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.0510967,
+  "date": 1765244754.897235,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
