--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e2074398",
+   "id": "eaa7c575",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "040c1f29",
+   "id": "99a326fa",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05869768",
+   "id": "975f9b6f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d92bd22",
+   "id": "8c0b0912",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2fe3b99",
+   "id": "07067832",
    "metadata": {},
    "source": [
     "### References\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1977737",
+   "id": "7a8ad246",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ea8960",
+   "id": "b4da2a73",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f80af5d",
+   "id": "3a20c665",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6a4a279",
+   "id": "ee913618",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8ec30e",
+   "id": "d143f552",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda2d544",
+   "id": "fa96dda4",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f580629",
+   "id": "bd9b96bd",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be74e46b",
+   "id": "c9b3af7d",
    "metadata": {
     "hide-output": false
    },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e44f6d2f",
+   "id": "79a4a450",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c7b1536",
+   "id": "add6e329",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be901db7",
+   "id": "139e310f",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c397a785",
+   "id": "b65b3d39",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba63eb2",
+   "id": "41295ffe",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56371348",
+   "id": "e94bd5c3",
    "metadata": {
     "hide-output": false
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee292db1",
+   "id": "0a391d8f",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "701feb7c",
+   "id": "2831da77",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6201e34a",
+   "id": "71cde40c",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42f69958",
+   "id": "a971ae1b",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63de73da",
+   "id": "4ee3973a",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9f22d46",
+   "id": "4ebfc6c5",
    "metadata": {
     "hide-output": false
    },
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b323f9a",
+   "id": "66e0418c",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ccd8e40",
+   "id": "701b7e48",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "866c062f",
+   "id": "e2c7ee7b",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59ab6210",
+   "id": "38e7012d",
    "metadata": {
     "hide-output": false
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a086599",
+   "id": "686f2b21",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "464d6923",
+   "id": "5d61d86b",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36653ba2",
+   "id": "ab472cb7",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0541f2c0",
+   "id": "8029bd46",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389a95a0",
+   "id": "fab090c6",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df20609c",
+   "id": "40619b8a",
    "metadata": {
     "hide-output": false
    },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eada1f6",
+   "id": "b1ea1394",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a0401c",
+   "id": "696f76f7",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc37489",
+   "id": "63488ec1",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a53e9c73",
+   "id": "ce30ac0f",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4609103",
+   "id": "7c3e4022",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "310e705b",
+   "id": "f1bc9d2a",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feea85c0",
+   "id": "ca19395b",
    "metadata": {
     "hide-output": false
    },
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb6cde44",
+   "id": "4d097c51",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b80fda0d",
+   "id": "aaf34d06",
    "metadata": {
     "hide-output": false
    },
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf4738d",
+   "id": "056347b0",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d0acaa2",
+   "id": "ed656628",
    "metadata": {
     "hide-output": false
    },
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c05fc04",
+   "id": "037ad093",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23f2f95f",
+   "id": "b3804c5f",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca57e10f",
+   "id": "4556ef16",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477fd00f",
+   "id": "9e2a9ff3",
    "metadata": {
     "hide-output": false
    },
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b19eea",
+   "id": "5ce7bc73",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9888cd14",
+   "id": "bd3aeb0a",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ebb4791",
+   "id": "06c141b6",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1393d47",
+   "id": "5d363deb",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d95641b8",
+   "id": "ce399205",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a9b8c3",
+   "id": "7e81b1b6",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525a0f69",
+   "id": "c172886f",
    "metadata": {
     "hide-output": false
    },
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5541575e",
+   "id": "7ec4e09b",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71101334",
+   "id": "0fdd3107",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db9a979",
+   "id": "fd5a2f9a",
    "metadata": {
     "hide-output": false
    },
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0924a176",
+   "id": "c9eca056",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e6962c2",
+   "id": "12551e32",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28569285",
+   "id": "c599eb7c",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e31108f",
+   "id": "1928d041",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f8b7bed",
+   "id": "27223e21",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c61bf0",
+   "id": "bf46c495",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1094,16 +1094,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f26f83",
+   "id": "37331ec9",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
+    "## Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7654e148",
+   "id": "3a2c7751",
    "metadata": {
     "hide-output": false
    },
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b85234",
+   "id": "09865da9",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "176c4a1b",
+   "id": "895aac29",
    "metadata": {
     "hide-output": false
    },
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60594add",
+   "id": "34279988",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013007cb",
+   "id": "fadc94ae",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11c6e6b",
+   "id": "be6f7cbb",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99837308",
+   "id": "f8f58f7e",
    "metadata": {
     "hide-output": false
    },
@@ -1186,16 +1186,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17d87f5",
+   "id": "73114fae",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
+    "## Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e2b09bd",
+   "id": "7809028d",
    "metadata": {
     "hide-output": false
    },
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad26690",
+   "id": "32ffbb26",
    "metadata": {
     "hide-output": false
    },
@@ -1229,7 +1229,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.0896404,
+  "date": 1765244754.9350832,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
