--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec2f4e89",
+   "id": "bbb97473",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b4487ba",
+   "id": "53997e65",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a23aeb8",
+   "id": "b23fc831",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7ac6e85",
+   "id": "bad3e727",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28c6c2b",
+   "id": "61ba6b33",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b0b55ee",
+   "id": "5a7c2063",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3191d39",
+   "id": "04dd97d5",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1d7001",
+   "id": "90e8b786",
    "metadata": {},
    "source": [
     "## The Model"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54982791",
+   "id": "645f1423",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f12b4327",
+   "id": "e75d134d",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -189,7 +189,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-6d00e1d1-77ad-430c-9f3c-e465e2b56ffb'></a>\n",
+    "<a id='equation-0a02b9f8-af38-45a3-91c9-d151f843c80b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -202,7 +202,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-6d1bc560-771f-4cf9-8bdd-1e1211e404d0'></a>\n",
+    "<a id='equation-67723f71-9a70-47bf-b481-6899254ab915'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "415f17a0",
+   "id": "c643ab82",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -256,7 +256,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-3b9bdd8d-7d91-4986-a91e-8ca75737ea31'></a>\n",
+    "<a id='equation-43e887e7-b5ab-4105-a3da-31d612526187'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -266,7 +266,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-cd0afed4-520f-4b38-b7fe-fd14fb302f89'></a>\n",
+    "<a id='equation-abd077a1-11cf-4294-9bb9-2a28cda53bf5'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -280,7 +280,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-d193b963-689a-4c79-8a3e-81c592623fd0'></a>\n",
+    "<a id='equation-50f81fdf-9287-44b7-a12e-69f4758bae28'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -290,7 +290,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-c8503ccf-6413-42bf-af02-25f8abc74fa7'></a>\n",
+    "<a id='equation-993df52d-12f0-4c96-b2f4-2b11d39c57af'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df451cb",
+   "id": "eed68fa0",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -315,7 +315,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-acfee4cc-f945-4917-845a-eaaed662f582'></a>\n",
+    "<a id='equation-a4fd2c8b-3793-42b4-a504-647ffaa409d7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -327,7 +327,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-fa79c2d4-3d92-4486-8c2f-a89f4c25cecb'></a>\n",
+    "<a id='equation-b2ce580c-3c19-45b3-a3c9-075306177421'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8841fd7f",
+   "id": "1668bd1b",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b808ac9",
+   "id": "f6f76204",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c38db4",
+   "id": "f0f11756",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f05831",
+   "id": "11053882",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f517bdf3",
+   "id": "ece25016",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4834035",
+   "id": "8b562745",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "382acd3a",
+   "id": "fe077e94",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64a009f",
+   "id": "b19c4451",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61048ca",
+   "id": "7050953d",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a561e48",
+   "id": "8805fa3a",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "574393b8",
+   "id": "ba89cd4d",
    "metadata": {
     "hide-output": false
    },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91b2da7f",
+   "id": "b56478b3",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f595a3f",
+   "id": "1778ef21",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba19af7f",
+   "id": "b2380d03",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0238d340",
+   "id": "88fd0d72",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "907f795c",
+   "id": "9d40146f",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e208364",
+   "id": "3fcc8eff",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a5344af",
+   "id": "445fadcd",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4c9b2f3",
+   "id": "a9608ac8",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e137b289",
+   "id": "d96c760f",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6def4eac",
+   "id": "4bc6c1d5",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a912173",
+   "id": "1486d930",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "734610bf",
+   "id": "02fd66ec",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab32560",
+   "id": "99a9b66b",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af7f084c",
+   "id": "ec67f69f",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06add938",
+   "id": "0f5823d9",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae9e2f45",
+   "id": "ab7a17e9",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a1c1250",
+   "id": "93d1dfd2",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb96ecef",
+   "id": "e97853f6",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01273006",
+   "id": "08a06450",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df382b67",
+   "id": "eb29c21e",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187f5038",
+   "id": "03cbfe70",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf57aff9",
+   "id": "fc292bde",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ca4ed5b",
+   "id": "83c809c6",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5285a669",
+   "id": "3b67c25b",
    "metadata": {
     "hide-output": false
    },
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "084d8eff",
+   "id": "e3d73985",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c18ff1c",
+   "id": "3cc3e416",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0af62bc",
+   "id": "7421c407",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b8583f",
+   "id": "30e2d0ae",
    "metadata": {
     "hide-output": false
    },
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67841598",
+   "id": "d34440ad",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "713aeb58",
+   "id": "f4c6b384",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e64603f",
+   "id": "463a7d64",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16b3f4ff",
+   "id": "fb03b66c",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd65c40",
+   "id": "4678291a",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1cd2b0a",
+   "id": "5b0539bf",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc545a55",
+   "id": "d8703939",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19379bbd",
+   "id": "85c7e133",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b62c5d",
+   "id": "d14cfa4a",
    "metadata": {
     "hide-output": false
    },
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f75c045",
+   "id": "d5666dfa",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e23a30af",
+   "id": "8ca0d023",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e91df6",
+   "id": "fb628de8",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e3b7567",
+   "id": "47fc1a60",
    "metadata": {
     "hide-output": false
    },
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c283346",
+   "id": "7394fce6",
    "metadata": {
     "hide-output": false
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ca0660f",
+   "id": "89f32714",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2edd0741",
+   "id": "ec7f568b",
    "metadata": {
     "hide-output": false
    },
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7daa5b83",
+   "id": "19461161",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc48fbf1",
+   "id": "58577588",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529be163",
+   "id": "46d7d9be",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad3b1f7",
+   "id": "5f5b673f",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa47303c",
+   "id": "8eb93465",
    "metadata": {
     "hide-output": false
    },
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c6e85e",
+   "id": "824008fd",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1338,16 +1338,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d2765b",
+   "id": "2df87f85",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
+    "## Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384317bb",
+   "id": "a9294af4",
    "metadata": {
     "hide-output": false
    },
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e7626fe",
+   "id": "bea6d091",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e17122d",
+   "id": "f0b54bb3",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44b116c",
+   "id": "b9375760",
    "metadata": {
     "hide-output": false
    },
@@ -1399,16 +1399,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b3b923",
+   "id": "1a9e4efb",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
+    "## Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "658cdf4e",
+   "id": "9e4aff00",
    "metadata": {
     "hide-output": false
    },
@@ -1432,7 +1432,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.2997491,
+  "date": 1765244755.1415906,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
