--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4fdf6845",
+   "id": "9b1591d5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c22571",
+   "id": "841e59d8",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e61242be",
+   "id": "049a0977",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cdaedff",
+   "id": "9aecd992",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510e1aa3",
+   "id": "0e1cade8",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae09dc06",
+   "id": "144a6db6",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c08eb1c0",
+   "id": "5d9b9723",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfe219f",
+   "id": "d9c5bbae",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d497ee96",
+   "id": "3a63c759",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49352ed8",
+   "id": "37b9a0ca",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29d59cbf",
+   "id": "b1620173",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95cb0281",
+   "id": "9d1b39c8",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b58f39",
+   "id": "ba2170d7",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c07b87",
+   "id": "8b8207c8",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4c2a8d",
+   "id": "2052e73d",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b99dc04e",
+   "id": "dc0060af",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef020528",
+   "id": "a055eac7",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830e8425",
+   "id": "c77eddd0",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792d6f39",
+   "id": "7f854195",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2910517",
+   "id": "7d005976",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ecfa4f1",
+   "id": "d4a4e252",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63fffc41",
+   "id": "d11a7ffe",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee152dbf",
+   "id": "0bdbfe60",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb3e678",
+   "id": "d99e120f",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20b16862",
+   "id": "b96ffa60",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617027e9",
+   "id": "26c0b203",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cde980d3",
+   "id": "21a28da0",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54fbc59f",
+   "id": "238c80ca",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4181b83a",
+   "id": "a47dca92",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e0afa6b",
+   "id": "90892a4d",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a78e15",
+   "id": "ba726e28",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b7f8fef",
+   "id": "0c87d741",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bfe0cd5",
+   "id": "7e80e400",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51f20364",
+   "id": "67e0acf7",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d35e5d",
+   "id": "531e98a6",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4471a352",
+   "id": "b133aa64",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e03f7d3",
+   "id": "4dabc96b",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4095c663",
+   "id": "f5909adb",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a9c370b",
+   "id": "b81e78ec",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f321d91f",
+   "id": "9b2f2f30",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "512b1e2f",
+   "id": "59b68954",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afecaa09",
+   "id": "c13d4f3f",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93513e7",
+   "id": "d740a79e",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -737,10 +737,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916fb273",
+   "id": "2c8260ad",
    "metadata": {},
    "source": [
-    "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
+    "### Solution\n",
     "\n",
     "Here is a `lax.fori_loop` version that JIT compiles the whole function"
    ]
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55133379",
+   "id": "356b4dcc",
    "metadata": {
     "hide-output": false
    },
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf3ec33",
+   "id": "84b60978",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f12494",
+   "id": "6251ba9b",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53d816df",
+   "id": "dd3f2f77",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36635a45",
+   "id": "2e882b5f",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7a8649",
+   "id": "a9ea7cdd",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.4044642,
+  "date": 1765244755.2439876,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
