--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff1b0095",
+   "id": "29c5b707",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c64c62",
+   "id": "2f8b100e",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3d259b",
+   "id": "5efecc11",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fffa9ad",
+   "id": "9185b313",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "535c93f4",
+   "id": "3cc56605",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f5a5d9a",
+   "id": "9d97e64a",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2292e5f9",
+   "id": "ead25d54",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8138cbc",
+   "id": "48344a0d",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "457f1072",
+   "id": "3ed662c3",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89656d8e",
+   "id": "966e72b2",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002ae730",
+   "id": "37b7214b",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ecebc5c",
+   "id": "d14e2b3b",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d712694",
+   "id": "9284d261",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62d52721",
+   "id": "b54cb0da",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1e2b1a",
+   "id": "a4f8610d",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1330c070",
+   "id": "e44b1b90",
    "metadata": {
     "hide-output": false
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb95125",
+   "id": "f56716a6",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e19c8f3",
+   "id": "d8ac1758",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437d95d1",
+   "id": "130228fb",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b883ca3",
+   "id": "c9e8e980",
    "metadata": {
     "hide-output": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af683bf",
+   "id": "4d94dbe8",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4cb4eb3",
+   "id": "bbd9540c",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc52cfc8",
+   "id": "fe683b89",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4618496",
+   "id": "669e6de5",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "297f1695",
+   "id": "3660fdd6",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a345313",
+   "id": "119d2553",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d28670a2",
+   "id": "3ffe9528",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07d61d4e",
+   "id": "aa86fa3d",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d27f1cc",
+   "id": "488b0d80",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using He\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "801d2d56",
+   "id": "367b81a5",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c04c442",
+   "id": "1339644b",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd5d87bf",
+   "id": "d7777b8c",
    "metadata": {
     "hide-output": false
    },
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab61a8ca",
+   "id": "1446ee3c",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff0f0f0e",
+   "id": "797a4eda",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0e6099d",
+   "id": "d0a6b2c9",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d8f4b34",
+   "id": "b60aff70",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17e371af",
+   "id": "c6a0bff3",
    "metadata": {
     "hide-output": false
    },
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f0a3a0",
+   "id": "c835cec0",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd96d679",
+   "id": "b0bb0ea9",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f454f3",
+   "id": "0c6c16fe",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8080384d",
+   "id": "80cd693d",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6395bbf4",
+   "id": "8ef1a428",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ffdb29",
+   "id": "cc153224",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cee7f3f0",
+   "id": "e85bdc16",
    "metadata": {
     "hide-output": false
    },
@@ -744,8 +744,6 @@
     "        θ: list,                    # Initial parameters (pytree)\n",
     "        x: jnp.ndarray,             # Training input data\n",
     "        y: jnp.ndarray,             # Training target data\n",
-    "        x_validate: jnp.ndarray,    # Validation input data\n",
-    "        y_validate: jnp.ndarray,    # Validation target data\n",
     "        config: Config              # contains configuration data\n",
     "    ):\n",
     "    \"\"\"\n",
@@ -762,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e41b0a18",
+   "id": "c0b5dd79",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -775,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b431c95",
+   "id": "8472d308",
    "metadata": {
     "hide-output": false
    },
@@ -787,12 +785,12 @@
     "θ = initialize_network(param_key, config)\n",
     "\n",
     "# Warmup run to trigger JIT compilation\n",
-    "train_jax_model(θ, x_train, y_train, x_validate, y_validate, config)\n",
+    "train_jax_model(θ, x_train, y_train, config)\n",
     "\n",
     "# Reset and time the actual run\n",
     "θ = initialize_network(param_key, config)\n",
     "start_time = time()\n",
-    "θ = train_jax_model(θ, x_train, y_train, x_validate, y_validate, config)\n",
+    "θ = train_jax_model(θ, x_train, y_train, config)\n",
     "θ[0].W.block_until_ready()  # Ensure computation completes\n",
     "jax_runtime = time() - start_time\n",
     "\n",
@@ -804,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "545cf3f3",
+   "id": "9c15c911",
    "metadata": {},
    "source": [
     "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
@@ -815,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d916f8d3",
+   "id": "d69f9d74",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f53656",
+   "id": "b6385df0",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -845,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0444d6f5",
+   "id": "c3a9c755",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -856,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abeb0def",
+   "id": "b1963ad2",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc84d773",
+   "id": "0ecd1b2d",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -900,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eca004d",
+   "id": "145c874b",
    "metadata": {
     "hide-output": false
    },
@@ -928,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae3df9c",
+   "id": "22e604cc",
    "metadata": {
     "hide-output": false
    },
@@ -945,7 +943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8427d4d",
+   "id": "0329ee23",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -960,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1946bb47",
+   "id": "64c0d144",
    "metadata": {
     "hide-output": false
    },
@@ -994,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b8ba558",
+   "id": "a0aedd00",
    "metadata": {
     "hide-output": false
    },
@@ -1021,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c358659e",
+   "id": "b6891945",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1030,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae0d0e1",
+   "id": "23b79d09",
    "metadata": {
     "hide-output": false
    },
@@ -1047,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "591232c9",
+   "id": "0401b40c",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1058,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c614915",
+   "id": "f5414b2d",
    "metadata": {
     "hide-output": false
    },
@@ -1113,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2856738",
+   "id": "73aab672",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1133,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d20456f",
+   "id": "6d1ba16e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1141,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe25ab16",
+   "id": "578dd12b",
    "metadata": {},
    "source": [
     "## Exercise 23.1\n",
@@ -1172,10 +1170,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "648683be",
+   "id": "2e4d2b09",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 23.1](https://jax.quantecon.org/#jax_nn_ex1)\n",
+    "## Solution\n",
     "\n",
     "Let’s implement and test several strategies.\n",
     "\n",
@@ -1187,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c3d84f",
+   "id": "b01e560a",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3324d126",
+   "id": "1955ba5e",
    "metadata": {},
    "source": [
     "**Strategy 2: Deeper Network + Learning Rate Schedule**\n",
@@ -1242,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1937377b",
+   "id": "3c86d709",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e5a217e",
+   "id": "b03ed90f",
    "metadata": {},
    "source": [
     "**Strategy 3: Deeper Network + LR Schedule + L2 Regularization**\n",
@@ -1309,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43ec840d",
+   "id": "94e16afb",
    "metadata": {
     "hide-output": false
    },
@@ -1379,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6089eba",
+   "id": "ddf98132",
    "metadata": {},
    "source": [
     "**Strategy 4: Baseline + L2 Regularization**\n",
@@ -1390,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d74ef8bb",
+   "id": "abf009b9",
    "metadata": {
     "hide-output": false
    },
@@ -1456,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7717c18e",
+   "id": "8791d334",
    "metadata": {},
    "source": [
     "**Results Summary**\n",
@@ -1467,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25775c7d",
+   "id": "c0bc0edc",
    "metadata": {
     "hide-output": false
    },
@@ -1512,7 +1510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a357aa",
+   "id": "17a459c0",
    "metadata": {},
    "source": [
     "The experimental results reveal several lessons:\n",
@@ -1529,7 +1527,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.528956,
+  "date": 1765244755.3646853,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
