--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ccfbea08",
+   "id": "e4cb52e5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9b1afc",
+   "id": "a408abde",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b36eebd",
+   "id": "720c7ba3",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "006f45ed",
+   "id": "f3bd6c7c",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db08deb5",
+   "id": "f76d9ee5",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d269d14f",
+   "id": "5d8adf8d",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "466900f6",
+   "id": "33107907",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7f52a61",
+   "id": "53ace009",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e5a8de",
+   "id": "2352ba3a",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a5bcc3f",
+   "id": "f2415736",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1f0844f",
+   "id": "32dcf609",
    "metadata": {
     "hide-output": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26cd2fc5",
+   "id": "a3f20539",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b811f66c",
+   "id": "40f12e37",
    "metadata": {
     "hide-output": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23742289",
+   "id": "cec2bb8a",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3927832b",
+   "id": "44705c2c",
    "metadata": {
     "hide-output": false
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "037d6e90",
+   "id": "77e12fb3",
    "metadata": {
     "hide-output": false
    },
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54d0d20b",
+   "id": "45d394f5",
    "metadata": {
     "hide-output": false
    },
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38294870",
+   "id": "a3e1375e",
    "metadata": {
     "hide-output": false
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb451a47",
+   "id": "6effac50",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "088fd689",
+   "id": "2e1b87de",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae99e25",
+   "id": "9c51c489",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df9dc070",
+   "id": "a92c62f9",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53f0bc8d",
+   "id": "8b05a07f",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1420edd",
+   "id": "ed121cfe",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2079e68",
+   "id": "31486c61",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "872635b4",
+   "id": "9a1569bc",
    "metadata": {
     "hide-output": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4892d77d",
+   "id": "b6d31d9f",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc32bf77",
+   "id": "2aa17c35",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "898d6959",
+   "id": "73839e6b",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2289a3a",
+   "id": "72647e40",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcac9ca2",
+   "id": "d81ccf2c",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dddf010c",
+   "id": "497a530d",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa708c08",
+   "id": "26366628",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5f9e23",
+   "id": "cd9a2b1b",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7821d412",
+   "id": "1909356b",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2587096",
+   "id": "a8dc3054",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55cb4be1",
+   "id": "17ee5327",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab03ca7",
+   "id": "055a1e01",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -565,16 +565,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8688aaa0",
+   "id": "fc67c4ed",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
+    "## Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8eed063",
+   "id": "c3a0e61f",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45672a74",
+   "id": "7bae9631",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65a8381a",
+   "id": "3d7985bb",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b3093b7",
+   "id": "929ef432",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f377a26",
+   "id": "7cca1d2a",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -707,7 +707,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.5517228,
+  "date": 1765244755.386771,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
