--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0346627",
+   "id": "b8bcb944",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a9f562",
+   "id": "9169cefc",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7722ff20",
+   "id": "0f45b177",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ef33ec",
+   "id": "a0f7ae40",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff221a6",
+   "id": "01722300",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3003b8e",
+   "id": "20f36900",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a614c3b",
+   "id": "d99eaec5",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07083649",
+   "id": "c1bb02cf",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71199db",
+   "id": "66583da0",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9527ef4",
+   "id": "2f2f785b",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a14eb4db",
+   "id": "55084c33",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a57cad23",
+   "id": "43bde8ea",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794bebf8",
+   "id": "66bc32e4",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d804837a",
+   "id": "2ce8e4e8",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38b12489",
+   "id": "0573fb6f",
    "metadata": {
     "hide-output": false
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20cf6b11",
+   "id": "ce9de378",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b05badf",
+   "id": "1f2df3c2",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7704701",
+   "id": "75d72b4e",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0833e9d3",
+   "id": "b335e441",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793772a9",
+   "id": "3d4f0ebc",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "399cdfa7",
+   "id": "82faad1c",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619580fd",
+   "id": "75d8f728",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aee0d5f",
+   "id": "b716b54f",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a327f9c",
+   "id": "cda4dac1",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb98cf5",
+   "id": "0a6dc97e",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8231b65c",
+   "id": "2bff392c",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830be669",
+   "id": "776f9c51",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d3c13fd",
+   "id": "ef3011a5",
    "metadata": {
     "hide-output": false
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfbe2a72",
+   "id": "8b548f3a",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4777b65",
+   "id": "f8b213f6",
    "metadata": {
     "hide-output": false
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb31be46",
+   "id": "c142fd08",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d650c1",
+   "id": "95c4e2f3",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd5efd6d",
+   "id": "329591cc",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "962095a6",
+   "id": "3465be9e",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c41c335",
+   "id": "67fb7de7",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -598,10 +598,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a11274d",
+   "id": "4c847896",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
+    "## Solution\n",
     "\n",
     "Let’s start by defining “true” parameter values."
    ]
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b0cf0d7",
+   "id": "c1d1de5a",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8f72bc",
+   "id": "ef634b5b",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a083e4e",
+   "id": "ef1e2ef4",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312f2194",
+   "id": "e3ba8ba8",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29860f48",
+   "id": "27b50f21",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b2e809",
+   "id": "4a030085",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f257aaf2",
+   "id": "f1a1b0be",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02fc8041",
+   "id": "b9662db5",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb707fb1",
+   "id": "ab7fa8be",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd206530",
+   "id": "22da66ba",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -723,7 +723,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.7275019,
+  "date": 1765244755.559107,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
