--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a52adaf6",
+   "id": "ff975c3b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5b78d22",
+   "id": "df5be4c5",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb82e44",
+   "id": "dd3830de",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a581cd67",
+   "id": "f2d471e6",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12064e4c",
+   "id": "bab196c8",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bbeab5c",
+   "id": "a157f55f",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47662b97",
+   "id": "fa942e1c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc8a64e",
+   "id": "7d82826c",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2227b006",
+   "id": "38a61551",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "878b10e0",
+   "id": "e0429849",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17bab62f",
+   "id": "7bd1ae86",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bee489f",
+   "id": "b1473c3a",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9342ea54",
+   "id": "85a65d35",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ac23363",
+   "id": "19c46355",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "620f64f0",
+   "id": "1531c0a9",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bdb4287",
+   "id": "ef440354",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f2aa13",
+   "id": "6427d650",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c4a6b8",
+   "id": "0ae67e1f",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479025e9",
+   "id": "ec6abbf0",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8514a484",
+   "id": "1779b3cd",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d87690",
+   "id": "8045b2c1",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef7676e5",
+   "id": "c71f0a9c",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dfb4d74",
+   "id": "2c037216",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4635dddb",
+   "id": "6f901d14",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "448920b1",
+   "id": "477fbe18",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5610a0d9",
+   "id": "7c1587b5",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d336b29",
+   "id": "70410ea3",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8485e34f",
+   "id": "b2aa417d",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9085602",
+   "id": "db1f2543",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c7815d4",
+   "id": "e04f53db",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4842f9b2",
+   "id": "01b1db24",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f7c70e5",
+   "id": "3766cff3",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f42687",
+   "id": "16c369e2",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c31c3c3",
+   "id": "f33f3f62",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f76c261",
+   "id": "a6d82e99",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19800064",
+   "id": "cb65e515",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1a998b1",
+   "id": "4b875988",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879a1ae3",
+   "id": "01542701",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d7d1e08",
+   "id": "30c21da5",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1157ccb5",
+   "id": "f5f15a6b",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "924de57a",
+   "id": "7e6e42b8",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e0829c",
+   "id": "634373c1",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab119a08",
+   "id": "38954088",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0dbd81f",
+   "id": "94acea90",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0ced99",
+   "id": "d31963d6",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74fa6e29",
+   "id": "a6640525",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cfb36d0",
+   "id": "f9fd9acd",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4f1f8f",
+   "id": "68261b5e",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61909b81",
+   "id": "79644ebe",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da2c24a3",
+   "id": "c4f24fa2",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7324cf00",
+   "id": "698e1f36",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99f090a2",
+   "id": "0738c8ef",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd4b47ee",
+   "id": "877e81a6",
    "metadata": {
     "hide-output": false
    },
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5731565e",
+   "id": "633ad14f",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f18af70",
+   "id": "ad30f7f2",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6834280c",
+   "id": "af6b6e4c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ffeb74",
+   "id": "fafeda89",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -1000,10 +1000,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a3ee77",
+   "id": "a4c24140",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
+    "## Solution\n",
     "\n",
     "Here’s one solution:"
    ]
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1751eb7",
+   "id": "8c7740a9",
    "metadata": {
     "hide-output": false
    },
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23c75be9",
+   "id": "a8635c88",
    "metadata": {
     "hide-output": false
    },
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "230aa8b0",
+   "id": "876996a2",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380c8c80",
+   "id": "31feaf51",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c7d8e58",
+   "id": "52bad820",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29960732",
+   "id": "7da4d9ac",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b569afb",
+   "id": "03b2a914",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41153f26",
+   "id": "72f5eae7",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41d4d587",
+   "id": "b1f25444",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1137,10 +1137,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ebb4a2",
+   "id": "d0e6f0ea",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
+    "## Solution\n",
     "\n",
     "Here is one solution"
    ]
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0081ebdf",
+   "id": "7f82891d",
    "metadata": {
     "hide-output": false
    },
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a97621b",
+   "id": "2b101a76",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edc2f274",
+   "id": "d88a475d",
    "metadata": {
     "hide-output": false
    },
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c942155",
+   "id": "265dbcad",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f9da3ee",
+   "id": "50902530",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2c8fae7",
+   "id": "2174da59",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366dcdaf",
+   "id": "5a42ff9e",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1241,10 +1241,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871eb7be",
+   "id": "2e8f9154",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
+    "## Solution\n",
     "\n",
     "Here’s one solution"
    ]
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd63e0b0",
+   "id": "7a45039a",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e929fca",
+   "id": "6816a095",
    "metadata": {
     "hide-output": false
    },
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9870720",
+   "id": "c07d064d",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1316,10 +1316,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efdaa76d",
+   "id": "bfcd3979",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
+    "## Solution\n",
     "\n",
     "Here’s one solution.\n",
     "\n",
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8375613",
+   "id": "75c3055e",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.982348,
+  "date": 1765244755.808755,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
