--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "29abcaa1",
+   "id": "7a07b487",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1535706",
+   "id": "e8cb22f4",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1edbabf4",
+   "id": "db370006",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78e3db57",
+   "id": "35806a7e",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e1645d",
+   "id": "8c670a2a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8965329d",
+   "id": "0c295302",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62f43ca5",
+   "id": "91a6ba4a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d27ef544",
+   "id": "6464bb03",
    "metadata": {
     "hide-output": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc7c187",
+   "id": "ecf858e4",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15fed0a3",
+   "id": "8b666033",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee0727a",
+   "id": "4acb3b07",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9af8b72",
+   "id": "6cebea72",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "565eb861",
+   "id": "3e0db88b",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfac8a88",
+   "id": "5f6185f9",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6b68b3",
+   "id": "2bf8fe0a",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78147f22",
+   "id": "988a8179",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01967a9e",
+   "id": "b87a0cd9",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c38653",
+   "id": "80a8f0ff",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e5b999c",
+   "id": "aa982236",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73779beb",
+   "id": "92989c4f",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed3e71ed",
+   "id": "885e3c94",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05bec874",
+   "id": "bdee97b1",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad6db29e",
+   "id": "d467d198",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e724f2",
+   "id": "4227bae9",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "987661a1",
+   "id": "4bbadac5",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee035242",
+   "id": "b17ff2ec",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e971b2",
+   "id": "0039f701",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60aa619d",
+   "id": "056c0a8f",
    "metadata": {
     "hide-output": false
    },
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e4f4cb8",
+   "id": "87633363",
    "metadata": {
     "hide-output": false
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107e627f",
+   "id": "27a4953d",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb26ef4",
+   "id": "65d1bf97",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3f1713b",
+   "id": "53c80c22",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5a46a17",
+   "id": "10efbecf",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -568,16 +568,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ece51bdd",
+   "id": "7c65d570",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
+    "## Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1007224f",
+   "id": "2b22aca8",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a89551f5",
+   "id": "454d1308",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5142d367",
+   "id": "c213fd00",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "078a1f9a",
+   "id": "66300fab",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4b85ea",
+   "id": "7a870d0d",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -665,7 +665,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.597247,
+  "date": 1765244755.4315395,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
