--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "757d65a3",
+   "id": "96e34f94",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc45865",
+   "id": "2ff7633f",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbefa5cc",
+   "id": "7c2c8da7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "328280b8",
+   "id": "22803e20",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771dc4e9",
+   "id": "de8ef732",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f1af617",
+   "id": "e64f7772",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "867d6637",
+   "id": "879a0d37",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98b0277",
+   "id": "4974f3b4",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc4b0edc",
+   "id": "07aec804",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce02d123",
+   "id": "3772c72b",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de713784",
+   "id": "9ea77c78",
    "metadata": {
     "hide-output": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69f7f63e",
+   "id": "c75af62f",
    "metadata": {},
    "source": [
     "Here we go"
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a22c6a05",
+   "id": "05d4b476",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22181ff3",
+   "id": "09f7f395",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256cded9",
+   "id": "b3a92f50",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce180b1",
+   "id": "8a374960",
    "metadata": {
     "hide-output": false
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04366c7c",
+   "id": "f4f742dc",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0027c8",
+   "id": "7fd26292",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce1aa5f",
+   "id": "1d12b057",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a399f65",
+   "id": "827a9921",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c78cfb8",
+   "id": "405246a0",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398bf36f",
+   "id": "a620ce93",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "846a29ea",
+   "id": "93d4e17a",
    "metadata": {
     "hide-output": false
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a9bb4f",
+   "id": "b2fca596",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c04b07e",
+   "id": "e5a5a71c",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d908cce1",
+   "id": "2e8fd731",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35986e9",
+   "id": "dee84a93",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26abf5e9",
+   "id": "ef4ec38b",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c3fde5",
+   "id": "c13f80ae",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23ec90c",
+   "id": "0d0cd6d4",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4453a588",
+   "id": "3a5b0184",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90e56ce",
+   "id": "fbf13f0a",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9f2043c",
+   "id": "7f06fde6",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ddc9c1a",
+   "id": "0cd26d6f",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7901945d",
+   "id": "4089d349",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -566,10 +566,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e8e28b",
+   "id": "46fb1de5",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
+    "## Solution\n",
     "\n",
     "Let’s first define the parameters for this problem"
    ]
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "876f0b4a",
+   "id": "6b3a6561",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40e16572",
+   "id": "dc71850d",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "933642d1",
+   "id": "683677cd",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d9b430e",
+   "id": "66cb3e03",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4834080f",
+   "id": "108df2e7",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb4b797",
+   "id": "1f6685cf",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4008d7fd",
+   "id": "6ff61f08",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e5843a",
+   "id": "b9a584ce",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3449407",
+   "id": "bbc7d695",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c0b7db7",
+   "id": "33acbff1",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b0436b",
+   "id": "e6437858",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3194a86a",
+   "id": "47a4880a",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f14bf8f2",
+   "id": "aca12658",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5210895f",
+   "id": "98e57ea7",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf82803",
+   "id": "56775c43",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -806,10 +806,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "061793d3",
+   "id": "f12182e4",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
+    "## Solution\n",
     "\n",
     "Define parameters and initial values"
    ]
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "286062e3",
+   "id": "e431ae43",
    "metadata": {
     "hide-output": false
    },
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aab1cba",
+   "id": "c654efb9",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8faf8eb",
+   "id": "658db6b6",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37e36178",
+   "id": "dc24e524",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78332ca6",
+   "id": "90500552",
    "metadata": {
     "hide-output": false
    },
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6590c3f",
+   "id": "b7f87f24",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -896,7 +896,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.7564332,
+  "date": 1765244755.5875106,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
