--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "99dba84b",
+   "id": "3c688342",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3037c233",
+   "id": "fb5d05b9",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "767c0405",
+   "id": "577729cf",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6c137c6",
+   "id": "2c7a9470",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32a4eb80",
+   "id": "236f84b5",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f79825",
+   "id": "624bc17d",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8793105",
+   "id": "6e438e40",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d60ea8",
+   "id": "3812564e",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46975d7",
+   "id": "f8088678",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91fcd043",
+   "id": "c03bb7d9",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73029ba2",
+   "id": "9a2bcca7",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b03c4c",
+   "id": "bba4f9d8",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "677dcf11",
+   "id": "98194ec4",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cac1e42",
+   "id": "63d63477",
    "metadata": {
     "hide-output": false
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ca8a6e9",
+   "id": "f96796d3",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a33f0fcd",
+   "id": "2701bb08",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce907fa",
+   "id": "e866140c",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9a11bfc",
+   "id": "d3d831a6",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e9cc06d",
+   "id": "18c31943",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da39740d",
+   "id": "034e83a5",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e509d7cf",
+   "id": "0fcd0aa9",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a8df3b",
+   "id": "0dc148b5",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b916809",
+   "id": "411349b0",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c072cf4",
+   "id": "0c0dfc75",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a57b1e",
+   "id": "a9823c4c",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14773bfa",
+   "id": "59b672b1",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3598722d",
+   "id": "00f1837a",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bcfa56e",
+   "id": "6991958b",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9364ce1f",
+   "id": "39ed5d96",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940f8b78",
+   "id": "d23e0d28",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f816be1c",
+   "id": "071e2a92",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d36753d",
+   "id": "27c7e243",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91c01672",
+   "id": "0e36f6dd",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4709aa1",
+   "id": "b0292c38",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6059bf1c",
+   "id": "85c74a95",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6264d2b",
+   "id": "e6d4fd0b",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c34eba",
+   "id": "f61002c8",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92507dbb",
+   "id": "c6d9166b",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f447441",
+   "id": "ff8c95ad",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c76d83",
+   "id": "4f359f0a",
    "metadata": {
     "hide-output": false
    },
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9ef1783",
+   "id": "cd46e6ee",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c32c0ed",
+   "id": "738f70b4",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebdcba4a",
+   "id": "5d442f30",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08a1bcd7",
+   "id": "63d14e22",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21cc87e7",
+   "id": "2fadf2d9",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58354f2",
+   "id": "d486673f",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c26f935",
+   "id": "1a75609b",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7abe2ba",
+   "id": "0c1d466a",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "732add02",
+   "id": "d7be238c",
    "metadata": {
     "hide-output": false
    },
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9f74e8",
+   "id": "67de5157",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6e9f098",
+   "id": "b531ff77",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d261787",
+   "id": "15743b04",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0899a4a",
+   "id": "3b280d6e",
    "metadata": {
     "hide-output": false
    },
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431f107a",
+   "id": "ad98cabd",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24c98797",
+   "id": "914df931",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a1263b4",
+   "id": "31cca8c7",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36b0b4c8",
+   "id": "8a331efb",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be372504",
+   "id": "63ae966a",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e36e067",
+   "id": "9ece808f",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1c29ce",
+   "id": "525aaa67",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d7c470",
+   "id": "c4f48272",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a210130",
+   "id": "58d01b31",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dadf3e4",
+   "id": "295453f0",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a334385e",
+   "id": "79157acd",
    "metadata": {
     "hide-output": false
    },
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42077fa1",
+   "id": "49888198",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc24055e",
+   "id": "3dbabc3f",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb887fc",
+   "id": "a35f2e8e",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ed5a60c",
+   "id": "1fc23cb1",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a207f57",
+   "id": "d92844cb",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1395,16 +1395,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e127638",
+   "id": "e1ee39b8",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
+    "## Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16faccd2",
+   "id": "3cd9347b",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8c3ae17",
+   "id": "0ec187d2",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a2b82f9",
+   "id": "9402e414",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3584c7c",
+   "id": "7e9c6c7e",
    "metadata": {
     "hide-output": false
    },
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533e1dc2",
+   "id": "c374bc28",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad3eaea0",
+   "id": "bac7b8f8",
    "metadata": {
     "hide-output": false
    },
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c353b2a0",
+   "id": "07519a12",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6aa475e",
+   "id": "981e517c",
    "metadata": {
     "hide-output": false
    },
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43116f08",
+   "id": "7dd37011",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1513,7 +1513,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.8997025,
+  "date": 1765244755.7286477,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
