--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "04311a9c",
+   "id": "79d5381e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "680ea3d1",
+   "id": "4b58f30e",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4239d8",
+   "id": "2f5cffec",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c93bc2b",
+   "id": "b938687a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731e184e",
+   "id": "111fbcb3",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5c5d6fb",
+   "id": "3d963fbe",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5f95756",
+   "id": "187d3db2",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c6207bd",
+   "id": "e339b99c",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101f296f",
+   "id": "d4020f4f",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0ebfc44",
+   "id": "14576fec",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c354f7f2",
+   "id": "9f8be79d",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a61158a",
+   "id": "cf0f454b",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb59405",
+   "id": "ffdf10ca",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ac7666",
+   "id": "c5ce6cc9",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87495405",
+   "id": "bffa66dc",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a74c146",
+   "id": "c6d641be",
    "metadata": {
     "hide-output": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cf8258a",
+   "id": "535ce0bb",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "184ea6d3",
+   "id": "3aba86ea",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a061ea42",
+   "id": "7631c516",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a42070c",
+   "id": "df6dd19d",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f53b67d2",
+   "id": "d4a23d7e",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec36ef03",
+   "id": "83aa59a4",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b9256d",
+   "id": "38a014b2",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80cf8819",
+   "id": "8fbab404",
    "metadata": {
     "hide-output": false
    },
@@ -443,10 +443,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a5fa930",
+   "id": "ac653b66",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
+    "## Solution\n",
     "\n",
     "First let’s write a function that reads in the graph data above and builds a distance matrix."
    ]
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "904e925d",
+   "id": "19136c0a",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d28d0277",
+   "id": "d9938b61",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e20b4d3c",
+   "id": "98065ae6",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "030a3f99",
+   "id": "b77c52ec",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c4827b",
+   "id": "103ec6f4",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aedb634",
+   "id": "3eeaad1b",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f0eedb0",
+   "id": "1189e88d",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e5dfdd",
+   "id": "ccc0445c",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b716c7",
+   "id": "403b58dd",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a494e78b",
+   "id": "c037b83a",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "952d2737",
+   "id": "aba6d2cc",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b02cfc3",
+   "id": "b35e8c9c",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97706bc5",
+   "id": "28a00eae",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ebc167",
+   "id": "1a2922b9",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.9207888,
+  "date": 1765244755.749365,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
