--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d2347e4b",
+   "id": "fb395af3",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f4c5e2",
+   "id": "917ade05",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9298a96",
+   "id": "cd18ce36",
    "metadata": {},
    "source": [
     "# References\n",
@@ -39,7 +39,7 @@
   }
  ],
  "metadata": {
-  "date": 1764852957.9892907,
+  "date": 1765244755.815626,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
